add nexu bundle